fixed profile posts alignment issue

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -77,5 +77,8 @@ body {
     padding: 40px;
     margin-right: 40px;
     margin-left: 40px;
-    max-width: fit-content;
+}
+
+#comment {
+    max-width: 100%;
 }
